--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,8 @@
   grid-template-rows: repeat(16, 25px);
   grid-template-columns: repeat(16, 25px);
 }
+
+/* COLORING GRID BOXES */
+.color1 {
+  background-color: rgb(150, 150, 150);
+}
