--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,12 @@
 }
 
 .container {
-  width: 402px;
-  height: 402px;
+  box-sizing: content-box;
+  width: 700px;
+  height: 700px;
   border: 1px solid black;
   /* GRID */
   display: grid;
-  grid-template-rows: repeat(16, 25px);
-  grid-template-columns: repeat(16, 25px);
-}
-
-/* COLORING GRID BOXES */
-.color1 {
-  background-color: rgb(150, 150, 150);
+  grid-template-rows: repeat(20, 1fr);
+  grid-template-columns: repeat(20, 1fr);
 }
