--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,43 @@
   box-sizing: border-box;
 }
 
-.container {
+body {
+  background-color: lightblue;
+  /* FLEXBOX */
+  display: flex;
+  justify-content: center;
+}
+
+.container-big {
+  background-color: lightcyan;
+  border-radius: 15px;
+  margin-top: 3vh;
+  max-width: 1000px;
+  /* FLEXBOX */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-grid {
   box-sizing: content-box;
-  width: 700px;
-  height: 700px;
+  width: 600px;
+  height: 600px;
   border: 1px solid black;
   /* GRID */
   display: grid;
   grid-template-rows: repeat(20, 1fr);
   grid-template-columns: repeat(20, 1fr);
+}
+
+.title {
+  margin: 0.5em;
+  font-size: 50px;
+}
+
+.container-body {
+  margin: 0 30px 30px 30px;
+  background-color: rgb(240, 240, 240);
+  /* FLEXBOX */
+  display: flex;
 }
