--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,17 @@
 }
 
 body {
-  background-color: lightblue;
   /* FLEXBOX */
   display: flex;
   justify-content: center;
 }
 
 .container-big {
-  background-color: lightcyan;
-  border-radius: 15px;
+  background-color: rgb(210, 0, 0);
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   margin-top: 3vh;
+  margin-bottom: 3vh;
   max-width: 1000px;
   /* FLEXBOX */
   display: flex;
@@ -27,6 +28,8 @@ body {
   width: 600px;
   height: 600px;
   border: 1px solid black;
+  border-radius: 2px;
+  background-color: rgb(211, 211, 211);
   /* GRID */
   display: grid;
   grid-template-rows: repeat(20, 1fr);
@@ -34,13 +37,19 @@ body {
 }
 
 .title {
-  margin: 0.5em;
+  margin: 20px;
   font-size: 50px;
+  color: gold;
+  font-family: "Cabin Sketch", cursive;
+  font-weight: bold;
 }
 
 .container-body {
-  margin: 0 30px 30px 30px;
-  background-color: rgb(240, 240, 240);
+  margin: 0 40px 20px 40px;
   /* FLEXBOX */
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
