--- a/css/styles.css
+++ b/css/styles.css
@@ -53,3 +53,29 @@ body {
   align-items: center;
   gap: 20px;
 }
+
+/* BUTTONS */
+
+.container-buttons {
+  width: 100%;
+  /* FLEXBOX */
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.btn {
+  font-size: 18px;
+  font-family: "Cabin Sketch", cursive;
+  background-color: rgb(211, 211, 211);
+  color: rgb(50, 50, 50);
+  border-radius: 10px;
+  border: 1px solid rgb(211, 211, 211);
+  padding: 10px 20px;
+}
+
+.btn:hover {
+  background-color: rgb(50, 50, 50);
+  color: rgb(211, 211, 211);
+  cursor: pointer;
+}
